<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff04d01f"
        android:textSize="26sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtNumberOne"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:hint="@string/txtHintOne"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtNumberTwo"
        android:layout_below="@+id/txtNumberOne"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:hint="@string/txtHintTwo"
        android:gravity="center_horizontal" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNumberTwo"
        android:layout_centerHorizontal="true"
        android:id="@+id/rdGrp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAddition"
            android:id="@+id/radAdd"
            android:layout_gravity="center_horizontal|left"
            android:checked="true"
            android:textSize="16sp"
            android:layout_marginTop="2dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSubtraction"
            android:id="@+id/radSubtract"
            android:layout_gravity="center_horizontal|left"
            android:checked="false"
            android:textSize="16sp"
            android:layout_marginTop="2dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtMultiplication"
            android:id="@+id/radMultiply"
            android:layout_gravity="center_horizontal|left"
            android:checked="false"
            android:textSize="16sp"
            android:layout_marginTop="2dp" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSolution"
        android:id="@+id/btnShowSolution"
        android:layout_below="@+id/rdGrp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSolution"
        android:layout_below="@+id/btnShowSolution"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="#FF0000" />
</RelativeLayout>
